--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.10.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
