--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.4.2",
+    "@nestjs/websockets": "^9.4.2",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "bcrypt": "^5.1.0",
