--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/websockets": "^9.4.2",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
+    "@types/socket.io": "^3.0.2",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -51,7 +52,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "socket.io": "^4.6.2"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
